[Smart Lock] Fix "turn off" button in auto-signin first run experience.

BUG=606206

Review URL: https://codereview.chromium.org/1917713003

Cr-Commit-Position: refs/heads/master@{#389457}

Former-commit-id: da55ab76c24c3da0179daddc424443a1328e9abd